@@ -1,11 +1,15 @@
-Wt/dummy/any.hpp
-Wt/dummy/regex.hpp
-Wt/boost/signals/trackable.hpp
-Wt/boost/signals/connection.hpp
-Wt/exception
-Wt/dummy/string
+Wt/Chart/WAbstractChart
+Wt/Chart/WAxis
+Wt/Chart/WCartesianChart
+Wt/Chart/WChart2DRenderer
+Wt/Chart/WChartPalette
+Wt/Chart/WDataSeries
+Wt/Chart/WPieChart
+Wt/Chart/WStandardPalette
 Wt/WAbstractArea
 Wt/WAbstractItemModel
+Wt/WAbstractListModel
+Wt/WAbstractProxyModel
 Wt/WAbstractToggleButton
 Wt/WAccordionLayout
 Wt/WAnchor
@@ -31,6 +35,7 @@ Wt/WDate
 Wt/WDatePicker
 Wt/WDateValidator
 Wt/WDefaultLayout
+Wt/WDefaultLoadingIndicator
 Wt/WDialog
 Wt/WDllDefs.h
 Wt/WDoubleValidator
@@ -48,8 +53,9 @@ Wt/WHBoxLayout
 Wt/WIconPair
 Wt/WImage
 Wt/WInPlaceEdit
-Wt/WInteractWidget
 Wt/WIntValidator
+Wt/WInteractWidget
+Wt/WItemSelectionModel
 Wt/WJavaScript
 Wt/WJavaScriptSlot
 Wt/WLabel
@@ -60,6 +66,7 @@ Wt/WLength
 Wt/WLengthValidator
 Wt/WLineEdit
 Wt/WLineF
+Wt/WLoadingIndicator
 Wt/WLocalizedStrings
 Wt/WLogger
 Wt/WMemoryResource
@@ -71,6 +78,7 @@ Wt/WMessageResourceBundle
 Wt/WMessageResources
 Wt/WModelIndex
 Wt/WObject
+Wt/WOverlayLoadingIndicator
 Wt/WPaintDevice
 Wt/WPaintedWidget
 Wt/WPainter
@@ -80,6 +88,8 @@ Wt/WPen
 Wt/WPoint
 Wt/WPointF
 Wt/WPolygonArea
+Wt/WPopupMenu
+Wt/WPopupMenuItem
 Wt/WPushButton
 Wt/WRadioButton
 Wt/WRectArea
@@ -94,18 +104,22 @@ Wt/WSignal
 Wt/WSignalMapper
 Wt/WSlider
 Wt/WSocketNotifier
+Wt/WSortFilterProxyModel
 Wt/WStackedWidget
+Wt/WStandardItem
 Wt/WStandardItemModel
 Wt/WStatelessSlot
 Wt/WString
+Wt/WStringListModel
 Wt/WStringUtil
+Wt/WSubMenuItem
 Wt/WSuggestionPopup
 Wt/WSvgImage
+Wt/WTabWidget
 Wt/WTable
 Wt/WTableCell
 Wt/WTableColumn
 Wt/WTableRow
-Wt/WTabWidget
 Wt/WText
 Wt/WTextArea
 Wt/WTextEdit
@@ -116,9 +130,10 @@ Wt/WTree
 Wt/WTreeNode
 Wt/WTreeTable
 Wt/WTreeTableNode
+Wt/WTreeView
+Wt/WVBoxLayout
 Wt/WValidationStatus
 Wt/WValidator
-Wt/WVBoxLayout
 Wt/WVectorImage
 Wt/WViewWidget
 Wt/WVirtualImage
@@ -126,12 +141,9 @@ Wt/WVmlImage
 Wt/WWebWidget
 Wt/WWidget
 Wt/WWidgetItem
-Wt/Chart
-Wt/Chart/WAbstractChart
-Wt/Chart/WAxis
-Wt/Chart/WCartesianChart
-Wt/Chart/WChart2DRenderer
-Wt/Chart/WChartPalette
-Wt/Chart/WDataSeries
-Wt/Chart/WPieChart
-Wt/Chart/WStandardPalette
+Wt/boost/signals/connection.hpp
+Wt/boost/signals/trackable.hpp
+Wt/dummy/any.hpp
+Wt/dummy/regex.hpp
+Wt/dummy/string
+Wt/exception
